# Btdiag

./: Android.mk  Btdiag.c  Btdiag.pc.in  CMakeLists.txt  Makefile  README.md  connection.c  connection.h  global.h  hciattach_rome.c  hciattach_rome.h  privateMembers.c  privateMembers.h  uart.c  uart.h
