CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Btdiag C)

SET(SRCS
./Btdiag.c
./connection.c
./hciattach_rome.c
./privateMembers.c
./uart.c
)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(LIBDIR "\${prefix}/lib")
SET(INCLUDEDIR "\${prefix}/include")
SET(VERSION_MAJOR 1)
SET(VERSION ${VERSION_MAJOR}.0.0)


set(LOCAL_C_INCLUDES
	. 
	..
	../..
	../../../../../hardware/libhardware/include
	../../../../../system/core/include)
include_directories(${LOCAL_C_INCLUDES})

LINK_DIRECTORIES(../../../../../hardware/libhardware)

FOREACH(flag ${packages_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

#SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden -Wall")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -g ")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

add_definitions("-DBLUEDROID_STACK")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${VERSION_MAJOR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${VERSION})
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${packages_LDFLAGS} ${CMAKE_DL_LIBS})
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} -ldlog)
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} -lpthread)
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} -ldl)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} -lhardware)


CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pc.in ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION bin/pkgconfig)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)

